<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background_color"
              android:orientation="vertical">

    <LinearLayout
            android:id="@+id/topFrame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/primary_color">

        <FrameLayout
                android:id="@+id/mainFrame"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/header_cover">


            <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/contact_label"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/content_color"
                    android:textSize="24sp"
                    android:typeface="normal"/>

        </FrameLayout>

        <FrameLayout
                android:id="@+id/frameBorder"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@color/secondary_color">

            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/header_cover">
            </FrameLayout>

        </FrameLayout>
    </LinearLayout>

    <ScrollView
            android:id="@+id/contentScroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:fadingEdge="vertical"
            android:fadingEdgeLength="25dp">


        <LinearLayout
                android:id="@+id/contentArea"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="15dp">


            <TextView
                    android:id="@+id/programName1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/footer_2_1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/content_color"/>


            <TextView
                    android:id="@+id/programName2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:autoText="true"
                    android:text="@string/footer_2_2"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/content_color"/>


            <TextView
                    android:id="@+id/tollFree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/tollFreeLabel"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/content_color"/>


            <TextView
                    android:id="@+id/localNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/localPhoneLabel"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/content_color"/>


            <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <ImageButton
                        android:id="@+id/facebook"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:scaleType="centerInside"
                        android:src="@drawable/fb"
                        android:contentDescription="@string/facebook"/>

                <ImageButton
                        android:id="@+id/twitter"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:scaleType="centerInside"
                        android:src="@drawable/tw"
                        android:contentDescription="@string/twitter"/>


                <ImageButton
                        android:id="@+id/youtube"
                        android:layout_width="65dp"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:scaleType="centerInside"
                        android:src="@drawable/yt"
                        android:contentDescription="@string/youtube"/>

                <ImageButton
                        android:id="@+id/webIcon"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="@android:color/transparent"
                        android:scaleType="centerInside"
                        android:src="@drawable/webicon"
                        android:contentDescription="@string/website"/>
            </LinearLayout>


            <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical">


                <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:src="@drawable/adulted_logo_recreated_big_extra_text_effects"
                        android:contentDescription="@string/footer"/>


                <TextView
                        android:id="@+id/version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="5dp"
                        android:text="@string/versionLbl"
                        android:textAppearance="?android:attr/textAppearanceSmall"/>


                <TextView
                        android:id="@+id/disclaimer_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/disclaimer_text"
                        android:textAppearance="?android:attr/textAppearanceSmall"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>