<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/scroller"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_color">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_color"
            android:gravity="center_horizontal"
            android:orientation="vertical">

        <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icoset"/>


            <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/settab_content_title"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/primary_color"
                    android:textSize="32dp"
                    android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">


            <TextView
                    android:id="@+id/subTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/settab_header"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/primary_color"/>


            <LinearLayout
                    android:id="@+id/textArea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">


                <TextView
                        android:id="@+id/num1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="15dp"
                        android:maxWidth="350sp"
                        android:text="@string/settab_content_1"
                        android:textColor="@android:color/black"/>


                <TextView
                        android:id="@+id/num2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/settab_content_2"
                        android:textColor="@android:color/black"/>


                <TextView
                        android:id="@+id/num3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/settab_content_3"
                        android:textColor="@android:color/black"/>


                <TextView
                        android:id="@+id/num4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/settab_content_4"
                        android:textColor="@android:color/black"/>


                <TextView
                        android:id="@+id/num5"
                        android:layout_width="350sp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/settab_content_5"
                        android:textColor="@android:color/black"/>


                <TextView
                        android:id="@+id/num6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="15dp"
                        android:maxWidth="350sp"
                        android:text="@string/settab_content_info"
                        android:textColor="@android:color/black"/>

            </LinearLayout>

            <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_margin="15dp"
                    android:src="@drawable/adulted_logo_recreated_big_extra_text_effects"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>