<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/linearLayout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/background_color"
              android:orientation="vertical">

    <FrameLayout
            android:id="@+id/bg2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary_color">

        <FrameLayout
                android:id="@+id/frameLayout1"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/header_cover">

            <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:text="@string/howGedLabel"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/content_color"
                    android:textSize="20sp"
                    android:typeface="normal"/>
        </FrameLayout>
    </FrameLayout>

    <FrameLayout
            android:id="@+id/frameLayout2"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/secondary_color">

        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/header_cover">
        </FrameLayout>

    </FrameLayout>

    <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_color">

        <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/background_color"
                android:orientation="vertical"
                android:padding="5dp">

            <TextView
                    android:id="@+id/whatged_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/howGed_info"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/content_color"
                    android:textSize="24sp"
                    android:typeface="normal"/>
        </LinearLayout>
    </ScrollView>

    <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:text="@string/cite"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/copyright_footer"/>

</LinearLayout>